tests/ui/no_error_coercion.stderr
error[E0277]: `?` couldn't convert the error to `std::alloc::AllocError`
  --> $DIR/no_error_coercion.rs:17:9
   |
17 | /         try_init!(Self {
18 | |             a: Box::new(42),
19 | |             bar <- init!(Bar { b: 42 }),
20 | |         })
   | |__________^ the trait `From<Infallible>` is not implemented for `std::alloc::AllocError`, which is required by `Result<Foo::new::__InitOk, std::alloc::AllocError>: FromResidual<Result<Infallible, Infallible>>`
   |
   = note: the question mark operation (`?`) implicitly performs a conversion on the error value using the `From` trait
   = help: the following other types implement trait `FromResidual<R>`:
             <Result<T, F> as FromResidual<Result<Infallible, E>>>
             <Result<T, F> as FromResidual<Yeet<E>>>
   = note: required for `Result<Foo::new::__InitOk, std::alloc::AllocError>` to implement `FromResidual<Result<Infallible, Infallible>>`
   = note: this error originates in the macro `$crate::__init_internal` which comes from the expansion of the macro `try_init` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
